# haskell-parsers

./: .gitignore  CHANGELOG.md  HaskellParsers.cabal  LICENSE  README.md
.github/workflows/: tests.yml
app/: Main.hs
src/: Parsers.hs  Stringify.hs
src/ParserUtils/Parsers/: Utils.hs
src/ParserUtils/Parsers/Utils/: Stringify.hs
src/Parsers/: Json.hs  Parsers.hs
src/Parsers/Parsers/: Json.hs  Xml.hs
test/: JsonParsingTest.hs  ParserUtilsTest.hs  Testing.hs  TokenParsingTest.hs  XmlParsingTest.hs  jsonTestData.json  xmlTestData.xml
