cabal-version:      2.4

name:               HaskellParsers

version:            0.1.0.0

synopsis:           Haskell implementation of parsers for various formats.

license:            MIT

license-file:       LICENSE

author:             Arpit Chakladar

maintainer:         54011232+arpitchakladar@users.noreply.github.com

category:           Parser

extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Parsers,
        Stringify,
        Parsers.Json

    -- other-modules:

    build-depends:
        base ^>=4.15.1.0,
        containers ^>= 0.6.4.1

    hs-source-dirs:   src
    default-language: Haskell2010

executable HaskellParsers
    main-is:          Main.hs

    -- other-modules:

    build-depends:
        base ^>=4.15.1.0,
        HaskellParsers

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite TokenParsing-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          TokenParsingTest.hs

    other-modules:
        Testing

    build-depends:
        base ^>=4.15.1.0,
        random ^>= 1.2.1,
        HaskellParsers

test-suite JsonParsing-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          JsonParsingTest.hs

    other-modules:
        Testing

    build-depends:
        base ^>=4.15.1.0,
        HaskellParsers
